--- a/src/scss/globals/_boilerplate.scss
+++ b/src/scss/globals/_boilerplate.scss
@@ -1,3 +1,5 @@
+@use '../utils/' as u;
+
 *,
 *::before,
 *::after {
@@ -6,6 +8,8 @@
 
 body {
   margin: 0;
-  color: var(--color-grey-darker);
+  background-color: var(--color-green-lighter);
   font-family: 'Karla', Arial, Helvetica, sans-serif;
+  font-size: u.rem(16);
+  color: var(--color-grey-darker);
 }
