--- a/src/scss/components/_field.scss
+++ b/src/scss/components/_field.scss
@@ -3,6 +3,7 @@
 .field {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   row-gap: u.rem(10);
 
   &__string-input {
@@ -10,9 +11,9 @@
   }
 
   &__error {
-    // display: none;
-    font-size: u.rem(16);
+    display: none;
     margin: u.rem(0);
+    font-size: u.rem(16);
     color: var(--color-red);
   }
 }
@@ -21,18 +22,13 @@
   margin: u.rem(0);
 }
 
-.radio-group {
-  display: flex;
-  flex-direction: column;
-  row-gap: u.rem(10);
-}
-
 .radio-option__label {
   display: flex;
   align-items: center;
+  flex-grow: 1;
   column-gap: u.rem(10);
   @include u.field-input;
-  padding: u.rem(8) u.rem(24);
+  padding: u.rem(10) u.rem(24);
 
   input[type="radio"] {
     margin: auto 0;
@@ -55,12 +51,17 @@
 
 textarea {
   resize: none;
+  line-height: 1.5;
+  
+  @include u.breakpoint(large) {
+    height: u.rem(96);
+  }
 }
 
 .consent-field {
   display: flex;
-  column-gap: u.rem(16);
   align-items: center;
+  column-gap: u.rem(16);
   padding-right: u.rem(28);
 
   input[type="checkbox"]:checked {
@@ -69,8 +70,8 @@ textarea {
 }
 
 .asterisk {
-  color: var(--color-green-medium);
   margin-left: u.rem(3);
+  color: var(--color-green-medium);
 }
 
 input[type="submit"] {
