--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,7 +1,8 @@
 @use 'functions' as f;
 
 $breakpoints: (
-  'medium': f.em(700),
+  'small': f.em(576),
+  'medium': f.em(768),
   'large': f.em(1200),
 );
 
@@ -20,7 +21,7 @@ $breakpoints: (
 @mixin field-input {
     font-family: 'Karla', Arial, Helvetica, sans-serif;
     font-size: f.rem(16);
-    padding: f.rem(8) f.rem(16);
+    padding: f.rem(10) f.rem(16);
     border: f.rem(1) solid var(--color-grey-darker);    
     border-radius: f.rem(8);
 
