--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,4 +1,4 @@
-@use '../utils/' as u;
+@use "../utils/" as u;
 
 .form {
   display: flex;
@@ -12,6 +12,7 @@
   border-radius: u.rem(16);
 
   &-wrapper {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +24,7 @@
   }
 
   &__submit {
-    font-family: 'Karla', Arial, Helvetica, sans-serif;
+    font-family: "Karla", Arial, Helvetica, sans-serif;
     font-size: u.rem(16);
     padding: u.rem(12) u.rem(16);
   }
