--- a/src/scss/globals/_typography.scss
+++ b/src/scss/globals/_typography.scss
@@ -1,19 +1,21 @@
 /* karla-latin-400-normal */
 @font-face {
-  font-family: 'Karla';
+  font-family: "Karla";
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/karla@latest/latin-400-normal.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/karla@latest/latin-400-normal.woff2)
+    format("woff2");
 }
 
 /* karla-latin-700-normal */
 @font-face {
-  font-family: 'Karla';
+  font-family: "Karla";
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/karla@latest/latin-700-normal.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/karla@latest/latin-700-normal.woff2)
+    format("woff2");
 }
 
 h1,
@@ -22,4 +24,8 @@ h3,
 h4 {
   margin: 0;
   line-height: 1.1;
+}
+
+p {
+  margin: 0;
 }
